Updated GreedyAlgorithm + minor changes