@@ -4,36 +4,36 @@ import java.util.Random;
 
 public class RandomSearch implements Optimizer{
     @Override
-    public Solution solve(City[] cities, Knapsack knapsack, double minSpeed,
+    public Solution solve(City[] cities, int knapsackSize, double minSpeed,
                           double maxSpeed, double[][] distanceMatrix, int iterations) {
 
         Random random = new Random();
         Solution bestSolution = null;
 
         for (int i=0; i<iterations; i++){
-            Knapsack copyKnapsack = new Knapsack(knapsack.getCapacity());
+            Knapsack knapsack = new Knapsack(knapsackSize);
             ArrayList<City> unvisitedCities = new ArrayList<>(Arrays.asList(cities));
 
-            City currentCity = unvisitedCities.remove(0);
+            City currentCity = unvisitedCities.removeFirst();
 
-            Solution solution = new Solution(copyKnapsack, currentCity);
+            Solution solution = new Solution(knapsack, currentCity);
 
             while (!unvisitedCities.isEmpty()) {
                 City nextCity = unvisitedCities.get(random.nextInt(unvisitedCities.size()));
-                int maxWeight = copyKnapsack.getCapacity() - copyKnapsack.getWeight();
+                int maxWeight = knapsack.getCapacity() - knapsack.getWeight();
                 ArrayList<Item> items = nextCity.getItemsLighterThan(maxWeight);
-                Item selectedItem = items.size() > 0 ? items.get(random.nextInt(items.size())) : null;
+                Item selectedItem = !items.isEmpty() ? items.get(random.nextInt(items.size())) : null;
 
                 double time;
 
                 if(selectedItem != null) {
                     time = distanceMatrix[currentCity.getIndex()-1][nextCity.getIndex()-1] /
-                            (maxSpeed - (maxSpeed - minSpeed) * (copyKnapsack.getWeight() + selectedItem.getWeight()) /
-                                    copyKnapsack.getCapacity());
+                            (maxSpeed - (maxSpeed - minSpeed) * (knapsack.getWeight() + selectedItem.getWeight()) /
+                                    knapsack.getCapacity());
                 } else {
                     time = distanceMatrix[currentCity.getIndex()-1][nextCity.getIndex()-1] /
-                            (maxSpeed - (maxSpeed - minSpeed) * (copyKnapsack.getWeight()) /
-                                    copyKnapsack.getCapacity());
+                            (maxSpeed - (maxSpeed - minSpeed) * (knapsack.getWeight()) /
+                                    knapsack.getCapacity());
                 }
 
                 solution.appendSolution(nextCity, time, selectedItem);
@@ -46,15 +46,8 @@ public class RandomSearch implements Optimizer{
                 bestSolution = solution;
             }
 
-            System.out.println("Iteration " + i + " - Best solution: " + bestSolution.getFitness() +
-                    " - Current solution: " + solution.getFitness());
-        }
-        System.out.println(bestSolution);
-
-        try {
-            Thread.sleep(100);
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
+//            System.out.println("Iteration " + i + " - Best solution: " + bestSolution.getFitness() +
+//                    " - Current solution: " + solution.getFitness());
         }
 
         return bestSolution;
